# penumbra-proto

./: CMakeLists.txt  README.md  penumbra-spec.md
demo/: DemoResolvers.cpp  DemoResolvers.h  DemoTheme.h  main.cpp
docs/: lustre_style_gaps_requirements.md  next_steps.md  penumbra_dpi_requirements.md  penumbra_glow_gradient_requirements.md  penumbra_image_widget_requirements.md  penumbra_iris_backend_requirements.md  penumbra_requirements.md  penumbra_text_blur_requirements.md  penumbra_theming_requirements.md  viewport-widget-spec.md
include/Penumbra/: Application.h  Geometry.h  IWidgetLifecycle.h
include/Penumbra/Anim/: Animation.h
include/Penumbra/Backends/: IIconBackend.h  IImageBackend.h  SdlImageBackend.h
include/Penumbra/Platform/: InputState.h  PlatformWindow.h
include/Penumbra/Render/: Color.h  Renderer.h
include/Penumbra/Widgets/: Box.h  Button.h  Checkbox.h  IconWidget.h  ImageWidget.h  InlineContainer.h  Label.h  NumericDrag.h  ScrollablePanel.h  SplitPanel.h  Styles.h  TextInput.h  ViewportWidget.h  WidgetBase.h
src/Penumbra/: Application.cpp
src/Penumbra/Backends/: SdlImageBackend.cpp
src/Penumbra/Platform/: PlatformWindow.cpp
src/Penumbra/Render/: Renderer.cpp
src/Penumbra/Widgets/: Box.cpp  Button.cpp  Checkbox.cpp  IconWidget.cpp  ImageWidget.cpp  InlineContainer.cpp  Label.cpp  NumericDrag.cpp  ScrollablePanel.cpp  SplitPanel.cpp  TextInput.cpp  ViewportWidget.cpp
